# simple_hj_model

./: LICENSE  README.md  pyproject.toml
julia_code/: Manifest.toml
notes/: dynamic_note.typ
src/: basic_stickground.ipynb  stick_ground_2D.ipynb  stick_ground_2d.py
src/.ipynb_checkpoints/: basic_stickground-checkpoint.ipynb
