[project]
name = "simple-hj-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "diffrax>=0.7.0",
    "jax>=0.6.0",
    "mediapy>=1.2.4",
    "mujoco>=3.3.2",
    "mujoco-mjx>=3.3.2",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=9.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
]
